--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <a href="https://www.google.com">
         Ir a google
     </a>
+    <br>
     <img src="https://cdn.alfabetajuega.com/alfabetajuega/2021/07/La-historia-de-Los-Caballeros-del-Zodiaco-.jpg?width=1200" 
     width="50%"
     eigth="auto">
-    <img src="" alt="">
+    <img src="The simpsons.jpg"
+    width="50%"
+    eight="auto">
 
     <ul>
         <li>Hola</li>
