--- a/formulario.html
+++ b/formulario.html
@@ -24,6 +24,7 @@
             <option value="18_25">18 - 25</option>
             <option value="26_36">26 - 36</option>
         </select>
+        <br>com
         <input type="submit" value="Enviar">
 
         <label for="">Fecha de nacimiento</label>
