--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1 align="center", style="color:blue;">Hola como va!</h1>
-    <div align="center", style="color:grey;">
-        <p><b>ipsum  dolor</b> <i>sit, amet</i> consectetur adipisicing elit. Deleniti pariatur repellendus in aperiam, eos asperiores eveniet dolores quaerat saepe sapiente, animi velit accusantium esse adipisci eligendi nam odio a similique?/p>
-        <p>Párrafo número 2</p>
-        <p>Párrafo número 3</p>
-        <p>Párrafo número 4</p>
-    </div>
-    <a href="https://www.google.com">
-        Ir a google
-    </a>
-    <br>
-    <img src="https://cdn.alfabetajuega.com/alfabetajuega/2021/07/La-historia-de-Los-Caballeros-del-Zodiaco-.jpg?width=1200" 
-    width="50%"
-    eigth="auto">
-    <img src="The simpsons.jpg"
-    width="50%"
-    eight="auto">
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="utf-8"/>
+        <title>Clase3 - Codo a Codo</title>
+    </head>
 
-    <ul>
-        <li>Hola</li>
-        <li>Como</li>
-        <li>Va</li>
-    </ul>
-
-    <ol>
-        <li>Numero 1</li>
-        <li>Numero 2</li>
-    </ol>
-
-    <form action="">
-        <label for="">
-            Username:
-        </label>
-        <input type="text">
-        <br>
-        <label for="">
-            Password:
-        </label>
-        <input type="password">
-        <br>
-        <label for="">
-            Nuevo?
-        </label>
-        <label for="">Si</label>
-        <input type="radio" name="nuevo">
-        <label for="">No</label>
-        <input type="radio" name="nuevo">
-        <br>
-        <input type="submit" value="Ingresar">
-    </form>
-</body>
+    <body>    
+        <header>
+            <h1>Autos</h1>
+        </header>            
+        <nav>
+            <ul>
+                <li>
+                    <a href="formulario.html">Formularios</a>                    
+                </li>
+                <li>
+                    <a href="git.html">Comandos Git</a>
+                </li>
+                <li>
+                    <a href="tablas.html">Tablas</a>
+                </li>
+            </ul>
+        </nav>
+        <main>
+            <section>
+                <h2>
+                    Ferrari
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolorum vero sed in natus nam laudantium impedit iste voluptas quidem dignissimos nisi soluta quaerat, amet ipsam eos. Beatae, iste reprehenderit.
+                </p>
+            </section>
+            <section>
+                <h3>Renault</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id harum quaerat mollitia similique sunt odit, accusantium delectus est assumenda nihil, eum repellat! Velit maiores necessitatibus ad corrupti, nam atque eaque.</p>
+            </section>
+            <section>
+                <h4>Detalle</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id harum quaerat mollitia similique sunt odit, accusantium delectus est assumenda nihil, eum repellat! Velit maiores necessitatibus ad corrupti, nam atque eaque.</p>
+            </section>
+        </main> 
+        <aside>
+            <section>
+                <p>Anuncio1</p>
+            </section>
+        </aside>
+        <hr>
+        <footer>
+            <ul>
+                <li>
+                    Abaout
+                </li>
+                <li>
+                    Mision
+                </li>
+            </ul>
+        </footer>       
+    </body>
 </html>
