--- a/clase10/index.html
+++ b/clase10/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,12 +8,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <nav class="menu-container">
+            <a href="">Home</a>
+            <ul>
+                <li>
+                    <a href="#sec1">Section 1</a>
+                </li>
+                <li>
+                    <a href="#sec2">Section 2</a>
+                </li>
+                <li>
+                    <a href="#sec3">Section 3</a>
+                </li>
+            </ul>
+        </nav>
+        <img src="./imagenportada.jpg" alt="">
+    </header>
     <main>
         <section id="sec1">
             <div class="content-text">
                 <h2>Section 1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="#sec2">Section 2</a>
+                <a href="#sec1">Section 1</a>
             </div>
             <img src="./1.svg">
         </section>
@@ -21,7 +38,7 @@
             <div class="content-text">
                 <h2>Section 2</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="#sec3">Section 3</a>
+                <a href="#sec3">Section 2</a>
             </div>
             <img src="./2.svg">
         </section>
@@ -29,23 +46,7 @@
             <div class="content-text">
                 <h2>Section 3</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="#sec1">Section 1</a>
-            </div>
-            <img src="./3.svg">
-        </section>
-        <section id="sec3">
-            <div class="content-text">
-                <h2>Section 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="#sec1">Section 1</a>
-            </div>
-            <img src="./3.svg">
-        </section>
-        <section id="sec3">
-            <div class="content-text">
-                <h2>Section 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="#sec1">Section 1</a>
+                <a href="#sec1">Section 3</a>
             </div>
             <img src="./3.svg">
         </section>
